# maxtui

./: .gitignore  Cargo.toml  README.md  __init__.py  build.py  maxtui.pyi  pyproject.toml
docs/: architecture.md
examples/: demo.py
src/: app.rs  backend.rs  event.rs  layout.rs  lib.rs  py.rs  style.rs  terminal_app.rs  widgets.rs
