[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "maxtui"
version = "0.1.0"
description = "High-performance terminal UI framework"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "Soumalya Das"}]
keywords = ["tui", "terminal", "ui", "ratatui", "crossterm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8+",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries",
]

[tool.maturin]
module-name = "maxtui"
python-source = "."
features = ["pyo3/extension-module"]
